fix: notice heading spacing

--- a/packages/web/src/components/gcds-notice/gcds-notice.css
+++ b/packages/web/src/components/gcds-notice/gcds-notice.css
@@ -35,6 +35,11 @@
         --gcds-notice-content-heading-font-desktop
       );
       --gcds-heading-h5-mobile: var(--gcds-notice-content-heading-font-mobile);
+      margin-block-start: var(--gcds-notice-content-heading-margin-block-start-desktop);
+
+      @media only screen and (width < 48em) {
+        margin-block-start: var(--gcds-notice-content-heading-margin-block-start-mobile);
+      }
     }
 
     .notice__icon {
